objects/Account.object
<CustomObject>
    <fields>
        <fullName>Co_App_Years_at_Address__c</fullName>
        <label>Years at Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 year</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>6 years</fullName>
                </value>
                <value>
                    <fullName>7 years</fullName>
                </value>
                <value>
                    <fullName>8 years</fullName>
                </value>
                <value>
                    <fullName>9 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>More than 10 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_App_Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Business_Address__c</fullName>
        <label>Business Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_Employment_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Gross_Annual_Income__c</fullName>
        <label>Gross Annual Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Other_Income__c</fullName>
        <label>Other Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Previous_Business_Address__c</fullName>
        <label>Business Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Previous_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Previous_Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Previous_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Previous_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Armed Forces</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Marshall Islands</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Micronesia</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Employment_Previous_Suite__c</fullName>
        <label>Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Previous_Years_at_Address__c</fullName>
        <label>Years at Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 year</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>6 years</fullName>
                </value>
                <value>
                    <fullName>7 years</fullName>
                </value>
                <value>
                    <fullName>8 years</fullName>
                </value>
                <value>
                    <fullName>9 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>More than 10 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Employment_Previous_Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Source_of_other_Income__c</fullName>
        <label>Source of other Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Armed Forces</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Marshall Islands</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Micronesia</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Employment_Suite__c</fullName>
        <label>Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Employment_Years_at_Address__c</fullName>
        <label>Years at Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 year</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>6 years</fullName>
                </value>
                <value>
                    <fullName>7 years</fullName>
                </value>
                <value>
                    <fullName>8 years</fullName>
                </value>
                <value>
                    <fullName>9 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>More than 10 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Employment_Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_on_Rating__c</fullName>
        <label>Comment on Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Gross_Annual_Income__c</fullName>
        <label>Gross Annual Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Other_Income__c</fullName>
        <label>Other Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Source_of_other_Income__c</fullName>
        <label>Source of other Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Armed Forces</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Marshall Islands</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Micronesia</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Suite__c</fullName>
        <label>Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Years_at_Address__c</fullName>
        <label>Years at Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 year</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>6 years</fullName>
                </value>
                <value>
                    <fullName>7 years</fullName>
                </value>
                <value>
                    <fullName>8 years</fullName>
                </value>
                <value>
                    <fullName>9 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>More than 10 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pers_I_agree_to_the_terms_and_conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I agree terms and conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Apt_Suite__c</fullName>
        <label>Apt/Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Personal_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Personal_Initial__c</fullName>
        <label>Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Previous_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Previous_Apt_Suite__c</fullName>
        <label>Apt/Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Previous_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Previous_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Armed Forces</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Marshall Islands</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Micronesia</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Previous_Years_at_Address__c</fullName>
        <label>Years at Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 year</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>6 years</fullName>
                </value>
                <value>
                    <fullName>7 years</fullName>
                </value>
                <value>
                    <fullName>8 years</fullName>
                </value>
                <value>
                    <fullName>9 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>More than 10 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Previous_Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_SSN__c</fullName>
        <label>SSN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Type_of_Residence__c</fullName>
        <label>Type of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Own Outright</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Years_at_Address__c</fullName>
        <label>Years at Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 year</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>6 years</fullName>
                </value>
                <value>
                    <fullName>7 years</fullName>
                </value>
                <value>
                    <fullName>8 years</fullName>
                </value>
                <value>
                    <fullName>9 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>More than 10 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Employer_Business_Address__c</fullName>
        <label>Business Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Armed Forces</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Marshall Islands</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Micronesia</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Employer_Suite__c</fullName>
        <label>Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Years_at_Address__c</fullName>
        <label>Years at Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 year</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>6 years</fullName>
                </value>
                <value>
                    <fullName>7 years</fullName>
                </value>
                <value>
                    <fullName>8 years</fullName>
                </value>
                <value>
                    <fullName>9 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>More than 10 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Employer_Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IMAGE(
IF(Total_Score_Points__c&lt;1, &quot;/img/samples/stars_000.gif&quot;,
IF(Total_Score_Points__c&lt;20, &quot;/img/samples/stars_100.gif&quot;, 
IF(Total_Score_Points__c&lt;50, &quot;/img/samples/stars_200.gif&quot;,
IF(Total_Score_Points__c&lt;80, &quot;/img/samples/stars_300.gif&quot;,
IF(Total_Score_Points__c&lt;100, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
</CustomObject>